# ccr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/badges/: loc.json  tests.json
.github/workflows/: ci.yml
src/: api.rs  auth.rs  main.rs  tools.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  helpers.rs  mod.rs  read.rs  webfetch.rs  write.rs
src/tui/: backend.rs  markdown.rs  mod.rs  render.rs  state.rs
src/types/: api.rs  error.rs  message.rs  mod.rs  newtypes.rs  tests.rs  tools.rs  tui_types.rs
